[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpleitk-timeseries-motion-correction"
version = "0.1.0"
description = "fMRI motion correction using SimpleITK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SimpleITK>=2.5.0",
    "numpy>=2.0.0",
    "tqdm>=4.67.0",
    "imageio>=2.37.0",
    "Pillow>=12.0.0",
    "matplotlib>=3.10.0",
    "scipy>=1.17.0"
]

